cluster-home/workloads/trek/trek.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trek
  namespace: trek
  labels:
    app: trek
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: trek
