cluster-home/workloads/trek/trek.Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trek
  namespace: trek
  labels:
    app: trek
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - trek.szamszur.cloud
      secretName: trek-szamszur-cloud-tls
  rules:
    - host: trek.szamszur.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trek
                port:
                  number: 3000
